# aenigmix

./: Cargo.toml  Readme.md
src/: cipher.rs  kolakoski.rs  lib.rs  main.rs
src/cipher/: kolakoski.rs
tests/: check_cipher.rs
