[package]
name = "aenigmix"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="aenigmix"
path = "src/lib.rs"
crate-type=["lib"]
bench=false

[[bin]]
name="aenigmix"
path="src/main.rs"
test=false
bench=false

[dependencies]
